# moonshot-mcp-server

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  DOCKER.md  Dockerfile  README.ZH.md  README.md  docker-compose.yml  moonshot_config.example.toml  pyproject.toml  ruff.toml  server.py
python_example/: mcp_weather_server.py  moonshot_tool_api.py  weather.py
src/: settings.py
src/libs/: i18n.py  mcp_config_loader.py  mcp_server.py
src/locale/: messages.pot
src/locale/en_US/LC_MESSAGES/: messages.mo  messages.po
src/locale/zh_CN/LC_MESSAGES/: messages.mo  messages.po
src/models/: __init__.py  config_model.py
src/script/: i18n_tools.py
src/utils/: custom_log.py
